--- a/detail.html
+++ b/detail.html
@@ -14,14 +14,14 @@
 
 <body>
     <div class="loader-wrapper">
-        <img loading="lazy" src="assets/images/loading.svg" class="loader-inner" alt="">
+        <img src="assets/images/loading.svg" class="loader-inner" alt="">
     </div>
     <div style="padding-bottom: 100px;">
         <div id="detail_main">
             <div class="detail_banner w-100">
-                <img loading="lazy" src="https://via.placeholder.com/375x262" class="w-100" alt="Detail Page Banner">
+                <img data-src="https://via.placeholder.com/375x262/ffkp53" class="w-100 lazy" alt="Detail Page Banner">
             </div>
-            <img loading="lazy" src="https://via.placeholder.com/164x250" class="bottom_banner" alt="">
+            <img data-src="https://via.placeholder.com/164x250/ffkp56" class="bottom_banner lazy" alt="">
             <i class="fa-solid fa-angle-left detail_back_button"></i>
         </div>
         <div class="detail_movie_info">
@@ -53,31 +53,29 @@
             <span class="not_read">Less more</span>
             <h3>Photo</h3>
             <div class="detail_slider_photo">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
-                <img loading="lazy" src="https://via.placeholder.com/104x72" class="movie_photo_slider_item" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp51" class="movie_photo_slider_item lazy" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp52" class="movie_photo_slider_item lazy" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp54" class="movie_photo_slider_item lazy" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp55" class="movie_photo_slider_item lazy" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp57" class="movie_photo_slider_item lazy" alt="">
+                <img data-src="https://via.placeholder.com/104x72/ffkp58" class="movie_photo_slider_item lazy" alt="">
             </div>
             <h3>Blogs About This Film</h3>
             <div class="blogs_about_film">
                 <div class="blog_item">
-                    <img loading="lazy" src="https://via.placeholder.com/165x120" class="blog_item_image" alt="">
+                    <img data-src="https://via.placeholder.com/165x120/ffks51" class="blog_item_image lazy" alt="">
                     <span>3 hours ago</span>
                     <span>The Best John Wick
                         Action Scenes</span>
                 </div>
                 <div class="blog_item">
-                    <img loading="lazy" src="https://via.placeholder.com/165x120" class="blog_item_image" alt="">
+                    <img data-src="https://via.placeholder.com/165x120/ffks52" class="blog_item_image lazy" alt="">
                     <span>3 hours ago</span>
                     <span>The Best John Wick
                         Action Scenes</span>
                 </div>
             </div>
         </div>
-
-
         <footer id="footer">
             <a href="#" class="d-block">
                 <i class="fa-solid fa-film footer_element"></i>
@@ -95,6 +93,7 @@
     </div>
     <script src="assets/scripts/jquery-3.6.0.min.js"></script>
     <script src="assets/slick/slick.min.js"></script>
+    <script src="assets/scripts/jquery.lazy.min.js"></script>
     <script src="assets/scripts/main.js"></script>
 </body>
 
