Get data & create detail

--- a/detail.html
+++ b/detail.html
@@ -19,18 +19,20 @@
     <div style="padding-bottom: 100px;">
         <div id="detail_main">
             <div class="detail_banner w-100">
-                <img data-src="https://via.placeholder.com/375x262/ffkp53" class="w-100 lazy" alt="Detail Page Banner">
+                <img src="https://via.placeholder.com/375x262/ffkp53" class="w-100 lazy detail_banner_top" alt="Detail Page Banner">
             </div>
-            <img data-src="https://via.placeholder.com/164x250/ffkp56" class="bottom_banner lazy" alt="">
+            <img src="https://via.placeholder.com/164x250/ffkp56" class="bottom_banner lazy" alt="">
+            <a href="index.html">
             <i class="fa-solid fa-angle-left detail_back_button"></i>
+        </a>
         </div>
         <div class="detail_movie_info">
-            <h3>John Wick 3: Parabellum</h3>
+            <h3 class="movie_big_title">John Wick 3: Parabellum</h3>
             <span class="movie_box_info movie_time d-block">2hr 10m | R</span>
-            <span class="d-block movie_box_info">Action, Crime, Thriller</span>
+            <span class="d-block movie_box_infos">Action, Crime, Thriller</span>
         </div>
         <div id="detail_rating">
-            <h3>4.6/5</h3>
+            <h3 class="detail_rating_movie">4.6/5</h3>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -53,25 +55,25 @@
             <span class="not_read">Less more</span>
             <h3>Photo</h3>
             <div class="detail_slider_photo">
-                <img data-src="https://via.placeholder.com/104x72/ffkp51" class="movie_photo_slider_item lazy" alt="">
-                <img data-src="https://via.placeholder.com/104x72/ffkp52" class="movie_photo_slider_item lazy" alt="">
-                <img data-src="https://via.placeholder.com/104x72/ffkp54" class="movie_photo_slider_item lazy" alt="">
-                <img data-src="https://via.placeholder.com/104x72/ffkp55" class="movie_photo_slider_item lazy" alt="">
-                <img data-src="https://via.placeholder.com/104x72/ffkp57" class="movie_photo_slider_item lazy" alt="">
-                <img data-src="https://via.placeholder.com/104x72/ffkp58" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp51" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp52" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp54" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp55" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp57" class="movie_photo_slider_item lazy" alt="">
+                <img src="https://via.placeholder.com/104x72/ffkp58" class="movie_photo_slider_item lazy" alt="">
             </div>
             <h3>Blogs About This Film</h3>
             <div class="blogs_about_film">
                 <div class="blog_item">
-                    <img data-src="https://via.placeholder.com/165x120/ffks51" class="blog_item_image lazy" alt="">
+                    <img src="https://via.placeholder.com/165x120/ffks51" class="blog_item_image lazy" alt="">
                     <span>3 hours ago</span>
-                    <span>The Best John Wick
+                    <span class="blog_title">The Best John Wick
                         Action Scenes</span>
                 </div>
                 <div class="blog_item">
-                    <img data-src="https://via.placeholder.com/165x120/ffks52" class="blog_item_image lazy" alt="">
+                    <img src="https://via.placeholder.com/165x120/ffks52" class="blog_item_image lazy" alt="">
                     <span>3 hours ago</span>
-                    <span>The Best John Wick
+                    <span class="blog_title">The Best John Wick
                         Action Scenes</span>
                 </div>
             </div>
