--- a/index.html
+++ b/index.html
@@ -13,231 +13,16 @@
 <body>
     <div class="container">
         <div class="loader-wrapper">
-            <img data-src="assets/images/loading.svg" class="loader-inner" alt="">
+            <img src="assets/images/loading.svg" class="loader-inner" alt="">
         </div>
         <div id="search_container">
             <h3>Star Movie</h3>
-            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie">
+            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie" value="star wars">
             <i class="fa-solid fa-magnifying-glass search_icon"></i>
             <i class="fa-solid fa-xmark search_close d-none"></i>
         </div>
+        <h3 class="dont_title">Please Search Movie!</h3>
         <div id="main">
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/fpff13" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/fcff33" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffbf43" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/fsff63" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffgf83" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffnc53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffkn53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffsw53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffsd53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffpn55" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffty53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
-            <div class="movie_item_container">
-                <img data-src="https://via.placeholder.com/164x250/ffkp53" class="lazy main_moive_photo" alt="">
-                <div class="movie_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3 class="movie_title">John Wick</h3>
-                <div>
-                    <span class="movie_box_info movie_category">Action</span>
-                    <span class="box_dot">&#8226;</span>
-                    <span class="movie_box_info movie_time">2hr 10m</span>
-                    <span class="movie_box_info">|</span>
-                    <span class="movie_box_info">PG-13</span>
-                </div>
-            </div>
         </div>
 
         <footer id="footer">
