--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="search_container">
             <h3>Star Movie</h3>
-            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie" value="star wars">
+            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie" value="">
             <i class="fa-solid fa-magnifying-glass search_icon"></i>
             <i class="fa-solid fa-xmark search_close d-none"></i>
         </div>
