--- a/detail.html
+++ b/detail.html
@@ -22,7 +22,8 @@
                 <img src="https://via.placeholder.com/375x262/ffkp53" class="w-100 lazy detail_banner_top" alt="Detail Page Banner">
             </div>
             <img src="https://via.placeholder.com/164x250/ffkp56" class="bottom_banner lazy" alt="">
-            <i class="fa-solid fa-angle-left detail_back_button"></i>
+            <a href="index.html"><i class="fa-solid fa-angle-left detail_back_button"></i></a>
+            <i class="fa-star far favorites"></i>
         </div>
         <div class="detail_movie_info">
             <h3 class="movie_big_title">John Wick 3: Parabellum</h3>
@@ -31,7 +32,7 @@
         </div>
         <div id="detail_rating">
             <h3 class="detail_rating_movie">4.6/5</h3>
-            <i class="fa-solid fa-star favorites"></i>
+            
             
         </div>
         <div class="main_bottom">
