--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
         <div id="search_container">
             <h3>Star Movie</h3>
-            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie" value="">
+            <input type="text" name="search" id="search" class="d-none" placeholder="Search Movie" value="" autocomplete="off">
             <i class="fa-solid fa-magnifying-glass search_icon"></i>
             <i class="fa-solid fa-xmark search_close d-none"></i>
         </div>
-        <h3 class="dont_title">Please Search Movie!</h3>
         <div id="main">
+            <h3 class="dont_title">No Favorites!</h3>
         </div>
 
         <footer id="footer">
